--- a/nextflow.config
+++ b/nextflow.config
@@ -1,10 +1,13 @@
 params {
-  bbmap = 'https://depot.galaxyproject.org/singularity/bbmap:38.90--he522d1c_3'
-  multiqc = "https://depot.galaxyproject.org/singularity/multiqc:1.11--pyhdfd78af_0"
-  fastqc = " biocontainers/fastqc:v0.11.9_cv8"
-  quast = "quay.io/biocontainers/quast:3.2"
+  bbmap = 'cathrine98/bbmap'
+  multiqc = "ewels/multiqc"
+  fastqc = "staphb/fastqc"
+  quast = "staphb/quast"
   bowtie2 = "quay.io/biocontainers/bowtie2:2.4.4--py38h72fc82f_0"
-  samtools = "quay.io/biocontainers/mulled-v2-0fd299cadb7a80e2cc704b5d903ccc54893c512d:377fcafe3b6e7ef703094f8f47a64d081622ee09-0"
-  spades = "quay.io/biocontainers/spades:3.15.2--h95f258a_1"
+  samtools = "staphb/samtools"
+  spades = "staphb/spades"
   khmer = "quay.io/biocontainers/mulled-v2-665bd99fae4b03b16fc6212aec473fdcacf0b19d:68271196de0894aac6d9bbc399ad1bb8000c8e4c-0"
+  unicycler = "staphb/unicycler"
+  abacas = "quay.io/biocontainers/abacas:1.3.1--pl5262hdfd78af_1"
+  sratoolkit = "aokad/sra-toolkit"
 }
