--- a/nextflow.config
+++ b/nextflow.config
@@ -10,4 +10,10 @@ params {
   unicycler = "staphb/unicycler"
   abacas = "quay.io/biocontainers/abacas:1.3.1--pl5262hdfd78af_1"
   sratoolkit = "aokad/sra-toolkit"
+  art = "https://depot.galaxyproject.org/singularity/art:3.11.14--h2d50403_1"
+  repeatmasker = "quay.io/biocontainers/repeatmasker:4.1.2-p1"
+  samtools_bowtie = "quay.io/biocontainers/mulled-v2-c742dccc9d8fabfcff2af0d8d6799dbc711366cf:b42a120d4ad2b0f6626127964d8bcc9ada05ed03-0"
+  gatk = "broadinstitute/gatk"
+  prokka = "staphb/prokka"
+  seqtk = "staphb/seqtk"
 }
