Updated containers for nextflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,7 @@ params {
   multiqc = "ewels/multiqc"
   fastqc = "staphb/fastqc"
   quast = "staphb/quast"
-  bowtie2 = "quay.io/biocontainers/bowtie2:2.4.4--py38h72fc82f_0"
+  bowtie2 = "alexeyebi/bowtie2_samtools"
   samtools = "staphb/samtools"
   spades = "staphb/spades"
   khmer = "quay.io/biocontainers/mulled-v2-665bd99fae4b03b16fc6212aec473fdcacf0b19d:68271196de0894aac6d9bbc399ad1bb8000c8e4c-0"
@@ -16,4 +16,5 @@ params {
   gatk = "broadinstitute/gatk"
   prokka = "staphb/prokka"
   seqtk = "staphb/seqtk"
+  kraken2 = "staphb/kraken2"
 }
