--- a/nextflow.config
+++ b/nextflow.config
@@ -17,4 +17,6 @@ params {
   prokka = "staphb/prokka"
   seqtk = "staphb/seqtk"
   kraken2 = "staphb/kraken2"
+  minimap2 = "nanozoo/minimap2"
+  mummer = "dougmercer/mummer4"
 }
