--- a/main.yaml
+++ b/main.yaml
@@ -1,41 +1,44 @@
-adapters: "adapters.fa"
-fastq_path: "*_L{001,002}_R{1,2}_*.fastq.gz"
-out_path: "result"
-multiqc_config: "viral_genomics/multiqc_config.yaml"
+adapters: "/fh/fast/warren_h/users/ebrierch/ebv_seq_project/input_data/adapters.fa"
+##fastq_path: "/home/sravisha/fuser/viralrecon/test_data/*_L{001,002}_R{1,2}_*.fastq.gz"
+fastq_path: "/fh/scratch/delete90/warren_h/biosino/OER034*/*/*_{1,2}.fq.gz"
+assembled_genome: "/fh/fast/warren_h/ebv_enktl/public_and_assembled_genomes/*.fasta"
+out_path: "/fh/fast/warren_h/ebv_enktl/viralrecon/troubleshoot/"
+multiqc_config: "/home/ebrierch/projects/viral_genomics/multiqc_config.yaml"
+biosino_metadata: "/fh/fast/warren_h/users/sravisha/viralrecon/1638819697117.txt"
 assembly_type: "de_novo"
-api_key: "sra_api_key"
+api_key: "1dee5a172fb908291f1e7bf2c035bd8ae209"
 public_list: ['SRR9641815', 'SRR9641824', 'SRR9641815', 'SRR9641824', 'SRR9641815', 
   'SRR9641823', 'SRR9641827', 'SRR9641817', 'SRR9641817', 'SRR9641854', 
   'SRR10276435', 'SRR7494928', 'SRR10276421', 'SRR7494941', 
   'SRR7494962']
-public_fastq: "public_ebv_data/"
+
 references:
   host:
-    genome: "Human_genomes/GRCh38_iGenomes/Sequence/Bowtie2Index/genome"
-    sans_ebv: "Human_genomes/GRCh38_iGenomes/Sequence/SansEBV"
-    sans_unplaced: "Human_genomes/GRCh38_iGenomes/Sequence/SansUnplaced"
-    sans_unplacedebv: "Human_genomes/GRCh38_iGenomes/Sequence/SansUnplacedEBV"
+    genome: "/fh/fast/warren_h/grp/Warren_E/ngs/ReferenceGenomes/Human_genomes/GRCh38_iGenomes/Sequence/Bowtie2Index/genome"
+    sans_ebv: "/fh/fast/warren_h/grp/Warren_E/ngs/ReferenceGenomes/Human_genomes/GRCh38_iGenomes/Sequence/SansEBV"
+    sans_unplaced: "/fh/fast/warren_h/grp/Warren_E/ngs/ReferenceGenomes/Human_genomes/GRCh38_iGenomes/Sequence/SansUnplaced"
+    sans_unplacedebv: "/fh/fast/warren_h/grp/Warren_E/ngs/ReferenceGenomes/Human_genomes/GRCh38_iGenomes/Sequence/SansUnplacedEBV"
   organism:
-    ebv_1_ref: 'ebv_reference/sequence/ebv1ref'
-    ebv_2_ref: 'ebv_reference/sequence/ebv2ref'
+    ebv_1_ref: '/fh/fast/warren_h/ebv_enktl/ebv_reference/sequence/ebv1ref'
+    ebv_2_ref: '/fh/fast/warren_h/ebv_enktl/ebv_reference/sequence/ebv1ref'
 index:
   host:
     bowtie:
-      genome: "Human_genomes/GRCh38_iGenomes/Sequence/Bowtie2Index"
-      sans_ebv: "Human_genomes/GRCh38_iGenomes/Sequence/SansEBV"
-      sans_unplaced: "Human_genomes/GRCh38_iGenomes/Sequence/SansUnplaced"
-      sans_unplacedebv: "Human_genomes/GRCh38_iGenomes/Sequence/SansUnplacedEBV"
+      genome: "/fh/fast/warren_h/grp/Warren_E/ngs/ReferenceGenomes/Human_genomes/GRCh38_iGenomes/Sequence/Bowtie2Index"
+      sans_ebv: "/fh/fast/warren_h/grp/Warren_E/ngs/ReferenceGenomes/Human_genomes/GRCh38_iGenomes/Sequence/SansEBV"
+      sans_unplaced: "/fh/fast/warren_h/grp/Warren_E/ngs/ReferenceGenomes/Human_genomes/GRCh38_iGenomes/Sequence/SansUnplaced"
+      sans_unplacedebv: "/fh/fast/warren_h/grp/Warren_E/ngs/ReferenceGenomes/Human_genomes/GRCh38_iGenomes/Sequence/SansUnplacedEBV"
   organism:
     bowtie:
-      ebv_1_ref: "ebv_reference/sequence/ebv1ref"
-      ebv_2_ref: "ebv_reference/sequence/ebv2ref"
-ebv_repeats: "mask/NC_007605_1_repeats.fa"
-ebv_public_data: ""
+      ebv_1_ref: "/fh/fast/warren_h/ebv_enktl/ebv_reference/sequence/ebv1ref"
+      ebv_2_ref: "/fh/fast/warren_h/ebv_enktl/ebv_reference/sequence/ebv2ref"
+ebv_repeats: "/fh/fast/warren_h/ebv_enktl/ebv_reference/mask/NC_007605_1_repeats.fa"
+ebv_public_data: "/fh/fast/warren_h/ebv_enktl/public_and_assembled_genomes_limited/*.fasta"
 variants:
-  hapmap: "hapmap_3.3.hg38.vcf.gz"
-  dbsnp: "Homo_sapiens_assembly38.dbsnp138.vcf"  
-  1000gomni: "1000G_omni2.5.hg38.vcf.gz"  
-  1000gphase3: "1000G.phase3.integrated.sites_only.no_MATCHED_REV.hg38.vcf"  
-  1000gphase1: "1000G_phase1.snps.high_confidence.hg38.vcf.gz"
-  axiom: "Axiom_Exome_Plus.genotypes.all_populations.poly.hg38.vcf.gz"   
-  mills: "Mills_and_1000G_gold_standard.indels.hg38.vcf.gz" 
+  hapmap: "/fh/fast/warren_h/grp/Warren_E/ngs/ReferenceGenomes/Human_genomes/GRCh38_iGenomes/Annotation/Gatk/hapmap_3.3.hg38.vcf.gz"
+  dbsnp: "/fh/fast/warren_h/grp/Warren_E/ngs/ReferenceGenomes/Human_genomes/GRCh38_iGenomes/Annotation/Gatk/Homo_sapiens_assembly38.dbsnp138.vcf"  
+  1000gomni: "/fh/fast/warren_h/grp/Warren_E/ngs/ReferenceGenomes/Human_genomes/GRCh38_iGenomes/Annotation/Gatk/1000G_omni2.5.hg38.vcf.gz"  
+  1000gphase3: "/fh/fast/warren_h/grp/Warren_E/ngs/ReferenceGenomes/Human_genomes/GRCh38_iGenomes/Annotation/Gatk/1000G.phase3.integrated.sites_only.no_MATCHED_REV.hg38.vcf"  
+  1000gphase1: "/fh/fast/warren_h/grp/Warren_E/ngs/ReferenceGenomes/Human_genomes/GRCh38_iGenomes/Annotation/Gatk/1000G_phase1.snps.high_confidence.hg38.vcf.gz"
+  axiom: "/fh/fast/warren_h/grp/Warren_E/ngs/ReferenceGenomes/Human_genomes/GRCh38_iGenomes/Annotation/Gatk/Axiom_Exome_Plus.genotypes.all_populations.poly.hg38.vcf.gz"   
+  mills: "/fh/fast/warren_h/grp/Warren_E/ngs/ReferenceGenomes/Human_genomes/GRCh38_iGenomes/Annotation/Gatk/Mills_and_1000G_gold_standard.indels.hg38.vcf.gz" 
