Updated config for QC and nextflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,3 +20,36 @@ params {
   minimap2 = "nanozoo/minimap2"
   mummer = "dougmercer/mummer4"
 }
+
+process {
+    withLabel: local_run {
+        executor = 'local'
+        maxRetries =  3
+        memory = 16.GB
+        cpus = 10
+    }
+    withLabel: low_mem {
+        executor = 'slurm'
+        queue = 'campus-new'
+        maxRetries =  3
+        memory = 80.GB
+        cpus = 4
+        time = '6h'
+    }
+    withLabel: mid_mem {
+        executor = 'slurm'
+        queue = 'campus-new'
+        maxRetries =  3
+        memory = 120.GB
+        cpus = 6.0
+        time = '6h'
+    }
+    withLabel: high_mem {
+        executor = 'slurm'
+        queue = 'campus-new'
+        maxRetries =  3
+        memory = 250.GB
+        cpus = 10
+        time = '6h'
+    }
+}
