--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,7 @@ params {
   abacas = "quay.io/biocontainers/abacas:1.3.1--pl5262hdfd78af_1"
   sratoolkit = "aokad/sra-toolkit"
   art = "https://depot.galaxyproject.org/singularity/art:3.11.14--h2d50403_1"
-  repeatmasker = "quay.io/biocontainers/repeatmasker:4.1.2-p1"
+  repeatmasker = "docker://dfam/tetools:latest"
   samtools_bowtie = "quay.io/biocontainers/mulled-v2-c742dccc9d8fabfcff2af0d8d6799dbc711366cf:b42a120d4ad2b0f6626127964d8bcc9ada05ed03-0"
   gatk = "broadinstitute/gatk"
   prokka = "staphb/prokka"
@@ -19,6 +19,7 @@ params {
   kraken2 = "staphb/kraken2"
   minimap2 = "nanozoo/minimap2"
   mummer = "dougmercer/mummer4"
+  parsnp = "staphb/parsnp"
 }
 
 process {
@@ -50,6 +51,6 @@ process {
         maxRetries =  3
         memory = 250.GB
         cpus = 10
-        time = '6h'
+        time = '3d'
     }
 }
